--- a/web/Manager/allFlights.xhtml
+++ b/web/Manager/allFlights.xhtml
@@ -1,12 +1,52 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
-        <title>Facelet Title</title>
+        <title>All Flights</title>
     </h:head>
-    <h:body>
-        Hello from Facelets
+        <h:body style="padding: 60px;">
+        <b:navBar brand="Mayflower Travel" brandHref="ManagerPanel.xhtml" fixed="top" inverse="true">
+            <b:navbarLinks>
+                <b:navLink value="Manage Employees" href="modifyemployees.xhtml"/>
+                <b:dropMenu value="Reservations">
+                    <b:navLink value="By Customer/Flight" href="reservationhistory.xhtml"/>
+                </b:dropMenu>
+                <b:dropMenu value="Revenue">
+                    <b:navLink value="By Date" href="salesreport.xhtml"/>
+                    <b:navLink value="By Flight/City/Customer" href="revenuelists.xhtml"/>
+                </b:dropMenu>
+                <b:dropMenu value="Flights">
+                    <b:navLink value="All Flights"/>
+                    <b:navLink value="By Airport"/>
+                    <b:navLink value="Active Flights"/>
+                </b:dropMenu>
+            </b:navbarLinks>
+        </b:navBar>
+        #{flightList.makeFlights()}
+         <b:container>
+        <b:row>
+            <b:column span="1">Airline ID</b:column>
+            <b:column span="1">Flight Number</b:column>
+            <b:column span="1">Number of Seats</b:column>
+            <b:column span="1">Days Operating</b:column>
+            <b:column span="1">Min Length of Stay</b:column>
+            <b:column span="1">Max Length of Stay</b:column>
+        </b:row>
+             <c:forEach items="#{flightList.flights}" var="s">
+                <b:row>
+                    <b:column span="1">#{s.airlineID}</b:column>
+                    <b:column span="1">#{s.flightNo}</b:column>
+                    <b:column span="1">#{s.numSeats}</b:column>
+                    <b:column span="1">#{s.daysOperating}</b:column>
+                    <b:column span="1">#{s.minLength}</b:column>
+                    <b:column span="1">#{s.maxLength}</b:column>
+                </b:row>
+            </c:forEach>  
+            
+        </b:container>
     </h:body>
 </html>
 
