--- a/web/Manager/activeFlights.xhtml
+++ b/web/Manager/activeFlights.xhtml
@@ -8,7 +8,6 @@
         <title>All Flights</title>
     </h:head>
         <h:body style="padding: 60px;">
-            
         <b:navBar brand="Mayflower Travel" brandHref="ManagerPanel.xhtml" fixed="top" inverse="true">
             <b:navbarLinks>
                 <b:navLink value="Manage Employees" href="modifyemployees.xhtml"/>
@@ -26,7 +25,7 @@
                 </b:dropMenu>
             </b:navbarLinks>
         </b:navBar>
-        #{flightList.makeFlights()}
+        #{flightList.makeActiveFlights()}
          <b:container>
         <b:row>
             <b:column span="1">Airline ID</b:column>
