--- a/web/Manager/allFlights.xhtml
+++ b/web/Manager/allFlights.xhtml
@@ -7,36 +7,38 @@
     <h:head>
         <title>All Flights</title>
     </h:head>
-        <h:body style="padding: 60px;">
-            
+    <h:body style="padding: 60px;">
+
         <b:navBar brand="Mayflower Travel" brandHref="ManagerPanel.xhtml" fixed="top" inverse="true">
             <b:navbarLinks>
-                <b:navLink value="Manage Employees" href="modifyemployees.xhtml"/>
-                <b:dropMenu value="Reservations">
-                    <b:navLink value="By Customer/Flight" href="reservationhistory.xhtml"/>
-                </b:dropMenu>
-                <b:dropMenu value="Revenue">
-                    <b:navLink value="By Date" href="salesreport.xhtml"/>
-                    <b:navLink value="By Flight/City/Customer" href="revenuelists.xhtml"/>
-                </b:dropMenu>
-                <b:dropMenu value="Flights">
-                    <b:navLink value="All Flights"/>
-                    <b:navLink value="By Airport"/>
-                    <b:navLink value="Active Flights"/>
-                </b:dropMenu>
-            </b:navbarLinks>
+                <b:navbarLinks>
+                    <b:navLink value="Manage Employees" href="modifyemployees.xhtml"/>
+                    <b:dropMenu value="Reservations">
+                        <b:navLink value="By Customer/Flight" href="reservationhistory.xhtml"/>
+                        <b:navLink value="Reserved Seats by Flight" href="reservedSeats.xhtml" />
+                    </b:dropMenu>
+                    <b:dropMenu value="Revenue">
+                        <b:navLink value="By Date" href="salesreport.xhtml"/>
+                        <b:navLink value="By Flight/City/Customer" href="revenuelists.xhtml"/>
+                    </b:dropMenu>
+                    <b:dropMenu value="Flights">
+                        <b:navLink value="All Flights" href="allFlights.xhtml"/>
+                        <b:navLink value="By Airport" href="airportFlight.xhtml" />
+                        <b:navLink value="Active Flights"  href="allFlights.xhtml"/>
+                    </b:dropMenu>
+                </b:navbarLinks> 
         </b:navBar>
         #{flightList.makeFlights()}
-         <b:container>
-        <b:row>
-            <b:column span="1">Airline ID</b:column>
-            <b:column span="1">Flight Number</b:column>
-            <b:column span="1">Number of Seats</b:column>
-            <b:column span="1">Days Operating</b:column>
-            <b:column span="1">Min Length of Stay</b:column>
-            <b:column span="1">Max Length of Stay</b:column>
-        </b:row>
-             <c:forEach items="#{flightList.flights}" var="s">
+        <b:container>
+            <b:row>
+                <b:column span="1">Airline ID</b:column>
+                <b:column span="1">Flight Number</b:column>
+                <b:column span="1">Number of Seats</b:column>
+                <b:column span="1">Days Operating</b:column>
+                <b:column span="1">Min Length of Stay</b:column>
+                <b:column span="1">Max Length of Stay</b:column>
+            </b:row>
+            <c:forEach items="#{flightList.flights}" var="s">
                 <b:row>
                     <b:column span="1">#{s.airlineID}</b:column>
                     <b:column span="1">#{s.flightNo}</b:column>
@@ -46,7 +48,7 @@
                     <b:column span="1">#{s.maxLength}</b:column>
                 </b:row>
             </c:forEach>  
-            
+
         </b:container>
     </h:body>
 </html>
