--- a/web/Manager/airportFlight.xhtml
+++ b/web/Manager/airportFlight.xhtml
@@ -13,18 +13,18 @@
                 <b:navLink value="Manage Employees" href="modifyemployees.xhtml"/>
                 <b:dropMenu value="Reservations">
                     <b:navLink value="By Customer/Flight" href="reservationhistory.xhtml"/>
+                    <b:navLink value="Reserved Seats by Flight" href="reservedSeats.xhtml" />
                 </b:dropMenu>
                 <b:dropMenu value="Revenue">
                     <b:navLink value="By Date" href="salesreport.xhtml"/>
                     <b:navLink value="By Flight/City/Customer" href="revenuelists.xhtml"/>
                 </b:dropMenu>
                 <b:dropMenu value="Flights">
-                    <b:navLink value="All Flights"/>
-                    <b:navLink value="By Airport"/>
-                    <b:navLink value="Active Flights"/>
+                    <b:navLink value="All Flights" href="allFlights.xhtml"/>
+                    <b:navLink value="By Airport" href="airportFlight.xhtml" />
+                    <b:navLink value="Active Flights"  href="allFlights.xhtml"/>
                 </b:dropMenu>
             </b:navbarLinks>
-        </b:navBar>
         <b:container>
             <h2>Revenue per Flight, City, Customer</h2>
             <h:form id="ID">
