fixed little bugs here and there finished Help Menu

--- a/web/Manager/airportFlight.xhtml
+++ b/web/Manager/airportFlight.xhtml
@@ -32,8 +32,9 @@
                     <b:navLink value="Active Flights"  href="allFlights.xhtml"/>
                 </b:dropMenu>
             </b:navbarLinks>
+        </b:navBar>
         <b:container>
-            <h2>Revenue per Flight, City, Customer</h2>
+            <h2>Flights by Airport</h2>
             <h:form id="ID">
                 <b:inputText id="input" value="#{revenueList.input}">
                     <f:facet name="prepend">
