--- a/web/Manager/reservedSeats.xhtml
+++ b/web/Manager/reservedSeats.xhtml
@@ -34,7 +34,7 @@
             </b:navbarLinks>
         </b:navBar>
         <b:container>
-        <h2>Reservation History by Flight Number and Customer Name</h2>
+        <h2>Reservation Seats by Customer</h2>
         <h:form id="ID">
             <b:inputText id="input" value="#{reshistory.textInput}" required="true" placeholder="FirstName LastName, or ID Number">
                 <f:facet name="prepend">
